reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__write_openapi_spec.snap
---
source: reflectapi-demo/src/tests/mod.rs
expression: s
---
{
  "openapi": "3.1.0",
  "info": {
    "title": "Demo application",
    "description": "This is a demo application",
    "version": "1.0.0"
  },
  "paths": {
    "/pets.create": {
      "description": "Create a new pet",
      "post": {
        "operationId": "pets.create",
        "description": "Create a new pet",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/myapi.proto.PetsCreateRequest"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "description": "empty object",
                  "type": "object",
                  "properties": {}
                }
              }
            }
          }
        },
        "parameters": [
          {
            "name": "authorization",
            "in": "header",
            "required": true,
            "schema": {
              "$ref": "#/components/schemas/std.string.String"
            }
          }
        ]
      }
    },
    "/pets.get-first": {
      "description": "Fetch first pet, if any exists",
      "post": {
        "operationId": "pets.get-first",
        "description": "Fetch first pet, if any exists",
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "oneOf": [
                    {
                      "description": "Null",
                      "type": "null"
                    },
                    {
                      "$ref": "#/components/schemas/myapi.model.Pet"
                    }
                  ]
                }
              }
            }
          }
        },
        "parameters": [
          {
            "name": "authorization",
            "in": "header",
            "required": true,
            "schema": {
              "$ref": "#/components/schemas/std.string.String"
            }
          }
        ]
      }
    },
    "/pets.list": {
      "description": "List available pets",
      "post": {
        "operationId": "pets.list",
        "description": "List available pets",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/myapi.proto.PetsListRequest"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "type": "object",
                  "title": "myapi.proto.Paginated<myapi.model.Pet>",
                  "required": [
                    "items"
                  ],
                  "properties": {
                    "cursor": {
                      "oneOf": [
                        {
                          "description": "Null",
                          "type": "null"
                        },
                        {
                          "$ref": "#/components/schemas/std.string.String"
                        }
                      ]
                    },
                    "items": {
                      "description": "Expandable array type",
                      "type": "array",
                      "items": {
                        "$ref": "#/components/schemas/myapi.model.Pet"
                      }
                    }
                  }
                }
              }
            }
          }
        },
        "parameters": [
          {
            "name": "authorization",
            "in": "header",
            "required": true,
            "schema": {
              "$ref": "#/components/schemas/std.string.String"
            }
          }
        ]
      }
    },
    "/pets.remove": {
      "description": "Remove an existing pet",
      "post": {
        "operationId": "pets.remove",
        "description": "Remove an existing pet",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/myapi.proto.PetsRemoveRequest"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "description": "empty object",
                  "type": "object",
                  "properties": {}
                }
              }
            }
          }
        },
        "parameters": [
          {
            "name": "authorization",
            "in": "header",
            "required": true,
            "schema": {
              "$ref": "#/components/schemas/std.string.String"
            }
          }
        ]
      }
    },
    "/pets.update": {
      "description": "Update an existing pet",
      "post": {
        "operationId": "pets.update",
        "description": "Update an existing pet",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/myapi.proto.PetsUpdateRequest"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "description": "empty object",
                  "type": "object",
                  "properties": {}
                }
              }
            }
          }
        },
        "parameters": [
          {
            "name": "authorization",
            "in": "header",
            "required": true,
            "schema": {
              "$ref": "#/components/schemas/std.string.String"
            }
          }
        ]
      }
    }
  },
  "components": {
    "schemas": {
      "f64": {
        "description": "64-bit floating point number",
        "type": "number"
      },
      "myapi.model.Behavior": {
        "oneOf": [
          {
            "type": "string"
          },
          {
            "type": "object",
            "title": "Aggressive",
            "required": [
              "Aggressive"
            ],
            "properties": {
              "Aggressive": {
                "type": "array",
                "prefixItems": [
                  {
                    "$ref": "#/components/schemas/f64"
                  },
                  {
                    "$ref": "#/components/schemas/std.string.String"
                  }
                ]
              }
            }
          },
          {
            "type": "object",
            "title": "Other",
            "required": [
              "Other"
            ],
            "properties": {
              "Other": {
                "type": "object",
                "title": "Other",
                "required": [
                  "description"
                ],
                "properties": {
                  "description": {
                    "$ref": "#/components/schemas/std.string.String"
                  },
                  "notes": {
                    "$ref": "#/components/schemas/std.string.String"
                  }
                }
              }
            }
          }
        ]
      },
      "myapi.model.Kind": {
        "oneOf": [
          {
            "description": " A dog",
            "type": "string"
          },
          {
            "description": " A cat",
            "type": "string"
          }
        ]
      },
      "myapi.model.Pet": {
        "type": "object",
        "title": "myapi.model.Pet",
        "required": [
          "name",
          "kind"
        ],
        "properties": {
          "age": {
            "oneOf": [
              {
                "description": "Null",
                "type": "null"
              },
              {
                "$ref": "#/components/schemas/u8"
              }
            ]
          },
          "behaviors": {
            "description": "Expandable array type",
            "type": "array",
            "items": {
              "$ref": "#/components/schemas/myapi.model.Behavior"
            }
          },
          "kind": {
            "$ref": "#/components/schemas/myapi.model.Kind"
          },
          "name": {
            "$ref": "#/components/schemas/std.string.String"
          }
        }
      },
      "myapi.proto.PetsCreateRequest": {
        "type": "array",
        "prefixItems": [
          {
            "$ref": "#/components/schemas/myapi.model.Pet"
          }
        ]
      },
      "myapi.proto.PetsListRequest": {
        "type": "object",
        "title": "myapi.proto.PetsListRequest",
        "properties": {
          "cursor": {
            "oneOf": [
              {
                "description": "Null",
                "type": "null"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              }
            ]
          },
          "limit": {
            "oneOf": [
              {
                "description": "Null",
                "type": "null"
              },
              {
                "$ref": "#/components/schemas/u8"
              }
            ]
          }
        }
      },
      "myapi.proto.PetsRemoveRequest": {
        "type": "object",
        "title": "myapi.proto.PetsRemoveRequest",
        "required": [
          "name"
        ],
        "properties": {
          "name": {
            "$ref": "#/components/schemas/std.string.String"
          }
        }
      },
      "myapi.proto.PetsUpdateRequest": {
        "type": "object",
        "title": "myapi.proto.PetsUpdateRequest",
        "required": [
          "name"
        ],
        "properties": {
          "age": {
            "oneOf": [
              {
                "description": "Null",
                "type": "null"
              },
              {
                "$ref": "#/components/schemas/u8"
              }
            ]
          },
          "behaviors": {
            "oneOf": [
              {
                "description": "Null",
                "type": "null"
              },
              {
                "description": "Expandable array type",
                "type": "array",
                "items": {
                  "$ref": "#/components/schemas/myapi.model.Behavior"
                }
              }
            ]
          },
          "kind": {
            "oneOf": [
              {
                "description": "Null",
                "type": "null"
              },
              {
                "$ref": "#/components/schemas/myapi.model.Kind"
              }
            ]
          },
          "name": {
            "$ref": "#/components/schemas/std.string.String"
          }
        }
      },
      "std.string.String": {
        "description": "UTF-8 encoded string",
        "type": "string"
      },
      "u8": {
        "description": "8-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
